修正 google search 提示字在 android 系統斷行的問題

--- a/sass/partial/_header-google-search.scss
+++ b/sass/partial/_header-google-search.scss
@@ -16,6 +16,7 @@
 
   td.gsc-input:after {
     position: absolute;
+    display: inline-block;
     top: 18px;
     left: 52px;
     content: '搜尋 iing.tw';
