--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -1332,3 +1332,8 @@ body { background-color: #183840; position: relative; }
 
 .hide-phone { display: none; }
 @media (min-width: 640px) { .hide-phone { display: block; } }
+
+.hide-mobile { display: none; }
+@media (min-width: 1025px) { .hide-mobile { display: block; } }
+
+.word-no-break { display: inline-block; }
