--- a/_layout_head.html.slim
+++ b/_layout_head.html.slim
@@ -5,7 +5,7 @@ link href="/images/favicon.png" rel="icon" size="32x32"
 link href="/images/iostouchicon.png" rel="apple-touch-icon" sizes="152×152"
 
 = stylesheet_link_tag "all", "/vendor/icomoon/style.css"
-= javascript_include_tag "/vendor/modernizr.custom.76886.js"
+= javascript_include_tag "/vendor/modernizr-custom.js"
 
 = render "/layout_javascript"
 
