--- a/global/_layout.html.slim
+++ b/global/_layout.html.slim
@@ -1,12 +1,12 @@
 doctype 5
-html lang="zh-TW"
+html.no-js lang="zh-TW"
   head
     meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     meta charset="utf-8"
     meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
 
     = stylesheet_link_tag "all", "/vendor/icomoon/style.css"
-    = javascript_include_tag "/vendor/modernizr.custom.76886.js"
+    = javascript_include_tag "/vendor/modernizr-custom.js"
 
     = javascript_include_tag \
       "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js", \
