--- a/partial/_video-list.html.slim
+++ b/partial/_video-list.html.slim
@@ -3,7 +3,7 @@
     - 6.times
       li
         a.video-item style="background-image: url('/images/post-2.jpg')" href="/video/show.html"
-          h3.video-title= zh_lorem_sentence
+          h3.video-title.auto-break-text= zh_lorem_sentence
   .video-list-action
     a.btn.btn_primary-dark href="#" 載入更多影片
 
