將大部分 js 移動到 body 結束標籤前，以提升使用體驗

--- a/_layout_foot.html.slim
+++ b/_layout_foot.html.slim
@@ -1,6 +1,9 @@
-/ = javascript_include_tag \
-/   "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js", \
-/   "/vendor/jquery.waypoints.min.js", \
-/   "/vendor/jquery.waypoints.sticky.min.js", \
-/   "all"
+= javascript_include_tag \
+  "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js", \
+  "/vendor/lazysizes.js", \
+  "/vendor/macho.js", \
+  "/vendor/jquery.waypoints.min.js", \
+  "/vendor/jquery.waypoints.sticky.min.js", \
+  "/vendor/dropdown", \
+  "all"
 
