--- a/global/_layout.html.slim
+++ b/global/_layout.html.slim
@@ -1,12 +1,18 @@
 doctype 5
 html.no-js lang="zh-TW"
   head
-    meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
-    meta charset="utf-8"
-    meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
+    = render "/layout_head"
+    = render "/layout_siteinfo"
+    = render "/layout_og"
 
-    = stylesheet_link_tag "all", "/vendor/icomoon/style.css"
-    = javascript_include_tag "/vendor/modernizr-custom.js"
+  body class="#{@page_name}"
+    .page-outer
+      .page
+        .page-inner
+          = yield
+          .page-bottom-illustrator
+          = render "/partial/back-to-top"
+          .copy &copy; 2016 蔡英文競選辦公室
 
     = javascript_include_tag \
       "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js", \
@@ -17,22 +23,4 @@ html.no-js lang="zh-TW"
       "/vendor/dropdown", \
       "global-page"
 
-    /[if IE]
-      = stylesheet_link_tag "ie"
-
-    /[if lt IE 9]
-      = javascript_include_tag "//html5shim.googlecode.com/svn/trunk/html5.js"
-
-    = render "/layout_siteinfo"
-    = render "/layout_og"
-  body class="#{@page_name}"
-    .page-outer
-      .page
-        .page-inner
-          = yield
-          .page-bottom-illustrator
-          = render "/partial/back-to-top"
-          .copy &copy; 2016 蔡英文競選辦公室
-
-    = render "/layout_foot"
     = render "/layout_livereload"
