新增 responsive comments plugin

--- a/_layout_foot.html.slim
+++ b/_layout_foot.html.slim
@@ -5,5 +5,6 @@
   "/vendor/jquery.waypoints.min.js", \
   "/vendor/jquery.waypoints.sticky.min.js", \
   "/vendor/dropdown", \
+  "/vendor/responsive-comments.min.js", \
   "all"
 
