--- a/partial/_hero.html.slim
+++ b/partial/_hero.html.slim
@@ -21,11 +21,8 @@
               h2.title 小額捐款
               p.description 這是一段文字敘述
     .hero-block-wrap
-      a.hero-block.medium style="background-image: url('/images/hero-video.jpg')" href="http://light.iing.tw" target="_blank"
-        video.video-bg autoplay="true" loop="true" poster="/images/hero-video-thumb.jpg"
-          source src="/images/hero-video.mp4" type="video/mp4"
-          source src="/images/hero-video.webm" type="video/webm"
-          source src="/images/hero-video.ogg" type="video/ogg"
+      a.hero-block.medium style="background-image: url('/images/hero-video.jpg')" href="http://light.iing.tw" target="_blank" data-responsive-comment-media="(min-width: 1025px)"
+        /! <video autoplay="true" class="video-bg" loop="true" poster="/images/hero-video-thumb.jpg"><source src="/images/hero-video.mp4" type="video/mp4" /><source src="/images/hero-video.webm" type="video/webm" /><source src="/images/hero-video.ogg" type="video/ogg" /></video>
         .hero-block-title
           .hero-block-title-inner
             h2.title 小英足跡・影片專區
