disability-equity 加入附錄

--- a/policies/disability-equity.html.slim
+++ b/policies/disability-equity.html.slim
@@ -9,7 +9,8 @@
       li.scroll-spy-menu-item: a href="#section-1" 現況
       li.scroll-spy-menu-item: a href="#section-2" 困境
       li.scroll-spy-menu-item: a href="#section-3" 目標
-      li.scroll-spy-menu-item: a href="#section-3" 主張
+      li.scroll-spy-menu-item: a href="#section-4" 主張
+      li.scroll-spy-menu-item: a href="#section-5" 附錄
   .policy-header style="background-image: url('/images/policies_image/disability_equity/page_header_bg.jpg')"
     .header-title
       .header-title-inner
@@ -99,7 +100,7 @@
           li.animation.fade-in
             h4.section-sub-title 障礙者於生命發展各階段的需求應受重視，政府於政策規劃及服務輸送時應考量其特殊性，並應有障礙者參與決策過程。
 
-  .section-class.scroll-spy-section#section-3 data-spy-index="4"
+  .section-class.scroll-spy-section#section-4 data-spy-index="4"
     span.animation.fade-in 主張
 
   .section
@@ -211,6 +212,46 @@
             p 確保身心障礙者的人身安全，防止對身心障礙者任何形式之剝削、暴力或虐待，加強對於身心障礙女性、身心障礙兒童、雙老家庭身心障礙者的人身安全保障。
           li.animation.fade-in
             p 身心障礙者權利公約之相關會議，應有不同障別的障礙者參與討論與決議。
+
+  .section-class.scroll-spy-section#section-5 data-spy-index="5"
+    span.animation.fade-in 附錄
+
+  .section.white-block
+    .center-content
+      .text-content
+        h3.section-title 聯合國〈身心障礙者權利公約〉
+        .figure
+          img.image.animation.fade-in src="/images/policies_image/disability_equity/de_1.jpg"
+        p.animation.fade-in 2006年12月聯合國大會提出〈身心障礙者權利公約〉，有關該公約的國內法化，我國已於民國103年8月1日由立法院三讀通過身心障礙者權利公約施行法，同年12月3日國際身心障礙者日正式施行，宣示我國保障身心障礙者人權並與國際接軌的決心。
+        p.animation.fade-in 〈身心障礙者權利公約〉要求各會員國共同致力於實現身心障礙者平等享有各種人權和基本自由，並增進對身心障礙者固有尊嚴的尊重，並羅列基本權利公約如下：
+
+        ul.list.animation.fade-in
+          li.col-3-content
+            p 各國應提高民眾對障礙者的認識，確保障礙者的生命權；
+          li.col-3-content
+            p 在法律之前獲得平等承認，確保障礙者獲得司法保護；
+          li.col-3-content
+            p 確保障礙者的人身自由與安全，免於酷刑或殘忍、不人道或有辱人格之待遇或處罰，免於剝削、暴力與虐待，保護人身完整性；
+          li.col-3-content
+            p 有權自由遷徙並取得或變更國籍；
+          li.col-3-content
+            p 自立生活與融入社區、確保身心障礙者儘可能獨立地享有個人行動能力；
+          li.col-3-content
+            p 確保障礙者享有表達和意見的自由、尊重隱私；
+          li.col-3-content
+            p 涉及婚姻、家庭和個人關係的所有事項中，在與其他人平等的基礎上，消除對障礙者的歧視；
+          li.col-3-content
+            p 確認障礙者享有受教育的權利，確保在各級教育實行融合教育制度和終生學習；
+          li.col-3-content
+            p 確保障礙者有權達到最高健康標準，不因身心障礙而受到歧視；
+          li.col-3-content
+            p 經由同儕支持，使障礙者能夠達到及保持最大程度的自立，充分發揮和維持體能、智能、社會及職業能力，全面融入及參與各個生活層面；
+          li.col-3-content
+            p 享有與其他人平等的工作權利，包括在開放、融合與無障礙的勞動市場和工作環境，自由選擇與接受謀生工作機會的權利；
+          li.col-3-content
+            p 障礙者有權為自己及家人獲得適足的生活水準，包括適足的食物、衣物、住宅，及持續改善生活條件；確保障礙者享有政治權利；
+          li.col-3-content
+            p 確認障礙者有權在與其他人平等的基礎上參與文化生活。
 
   .post
     .post-share
