食安政策換字

--- a/policies/food-safely.html.slim
+++ b/policies/food-safely.html.slim
@@ -152,7 +152,7 @@
           img.image.animation.fade-in.delay-400ms src="/images/policies_image/food_safely/fs4_3.png"
           .text-content.animation.fade-in.delay-400ms
             h4.section-sub-title 進口自產全面把關
-            p <strong>進口部分：</strong><br>我國食品來源有70％仰賴國外進口，國外進口（完成品）食品、農品做好邊境查驗，管控以海關查驗為主。未來將修改相關辦法，（大部分由業者自主管理，部份重要產品則需安全標示+海關查驗）貿易商檢付農產品之安全標示。
+            p <strong>進口部分：</strong><br>我國食品來源有70%仰賴國外進口，國外進口食品、農產品需取得認證，並做好邊境查驗。未來將修改相關辦法，貿易商進口需檢附食品、農產品安全的認證標示。
             p <strong>自產部分：</strong><br>針對國內生產部分，將全面檢視農地及工廠生產過程，嚴密監控水源品質，並管理農民使用化學農藥及肥料的耕作型態。並以灌排分離作法減少重金屬汙染、防止其他毒物物質傷害農地，淨化水土資源、掌握用藥品質。此外，推廣植物醫生以及友善環境耕作方法，以保護可供永續生產的水源、土壤。
 
   .section
