調整身心障礙與五大社會安定頁面

--- a/policies/disability-equity.html.slim
+++ b/policies/disability-equity.html.slim
@@ -16,7 +16,6 @@
       .header-title-inner
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
         h1.main-title 身心障礙者權益政策
-        // h2.main-sub-title
   .post
     .post-share
       span.post-share-title 分享：
@@ -90,14 +89,15 @@
     .center-content
       .text-content
         h3.section-title 政策目標
-        ul.todo-list
-          li.animation.fade-in
+      ul.todo-list.multi-col-content
+        .multi-col-content-inner
+          li.col-2-content
             h4.section-sub-title 增進整體社會對於障礙者的了解與認識。
-          li.animation.fade-in
-            h4.section-sub-title 運用資訊技術與科技輔具，建構無障礙的友善<br>環境。
-          li.animation.fade-in
+          li.col-2-content
             h4.section-sub-title 支持障礙者於社區中自立生活。
-          li.animation.fade-in
+          li.col-2-content
+            h4.section-sub-title 運用資訊技術與科技輔具，建構無障礙的友善環境。
+          li.col-2-content
             h4.section-sub-title 障礙者於生命發展各階段的需求應受重視，政府於政策規劃及服務輸送時應考量其特殊性，並應有障礙者參與決策過程。
 
   .section-class.scroll-spy-section#section-4 data-spy-index="4"
@@ -216,7 +216,7 @@
   .section-class.scroll-spy-section#section-5 data-spy-index="5"
     span.animation.fade-in 附錄
 
-  .section.white-block
+  .section
     .center-content
       .text-content
         h3.section-title 聯合國〈身心障礙者權利公約〉
