--- a/policies/five-plans.html.slim
+++ b/policies/five-plans.html.slim
@@ -14,7 +14,6 @@
       .header-title-inner
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
         h1.main-title 五大社會安定政策
-        / h2.main-sub-title
   .post
     .post-share
       span.post-share-title 分享：
@@ -44,59 +43,26 @@
   .section-class.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 主張
 
-  / .section
-  /   blockquote.bigtext.animation.slide-up: p 國家的「住宅政策」，不能只是「房地產政策」。<br>我們提出來的住宅政策，包含了全面的思維，除了要讓人民都有安定生活的居住選擇，也要發展不動產的四大新興產業，包括「都市更新」、「物業管理」、「租屋產業」與「社會住宅」，來帶動經濟的發展。
-  /   .blockquote-name: span 蔡英文
-
   .section.white-block
     .center-content
       .text-content
         h3.section-title 五大社會安定計畫
-        .figure
-          img.image.animation.fade-in src="/images/policies_image/five_plans/fp.gif"
         ul.order-list
           li.animation.fade-in
-            h4.section-sub-title 「安心住宅計畫」
+            h4.section-sub-title 安心住宅計畫
             p 八年內完成20萬戶只租不賣社會住宅，獎勵居家改造、優化居住空間
           li.animation.fade-in
-            h4.section-sub-title 「食品安全計畫」
+            h4.section-sub-title 食品安全計畫
             p 政府從農場到餐桌都嚴格把關，建立產銷履歷制度、提昇農業及食品加工技術
           li.animation.fade-in
-            h4.section-sub-title 「社區照顧計畫」
+            h4.section-sub-title 社區照顧計畫
             p 「托育、長照、就業」三合一照顧政策，並主張轉型為社會健康照護管理中心
           li.animation.fade-in
-            h4.section-sub-title 「年金永續計畫」
+            h4.section-sub-title 年金永續計畫
             p 召開年金國是會議，讓各行各業都參與討論
           li.animation.fade-in
-            h4.section-sub-title「治安維護計畫」
+            h4.section-sub-title 治安維護計畫
             p 毒品防治、反詐騙和婦女人身安全為優先重點
-    / .multi-col-content
-    /   .multi-col-content-inner
-    /     .col-3-content
-    /       .figure
-    /         img.image.animation.fade-in src="/images/policies_image/five_plans/fp_1.jpg"
-    /       h4.section-sub-title 「安心住宅計畫」
-    /       p 八年內完成20萬戶只租不賣社會住宅，獎勵居家改造、優化居住空間
-    /     .col-3-content
-    /       .figure
-    /         img.image.animation.fade-in src="/images/policies_image/five_plans/fp_2.jpg"
-    /       h4.section-sub-title 「食品安全計畫」
-    /       p 政府從農場到餐桌都嚴格把關，建立產銷履歷制度、提昇農業及食品加工技術
-    /     .col-3-content
-    /       .figure
-    /         img.image.animation.fade-in src="/images/policies_image/five_plans/fp_3.jpg"
-    /       h4.section-sub-title 「社區照顧計畫」
-    /       p 「托育、長照、就業」三合一照顧政策，並主張轉型為社會健康照護管理中心
-    /     .col-3-content
-    /       .figure
-    /         img.image.animation.fade-in src="/images/policies_image/five_plans/fp_4.jpg"
-    /       h4.section-sub-title 「年金永續計畫」
-    /       p 召開年金國是會議，讓各行各業都參與討論
-    /     .col-3-content
-    /       .figure
-    /         img.image.animation.fade-in src="/images/policies_image/five_plans/fp_5.jpg"
-    /       h4.section-sub-title「治安維護計畫」
-    /       p 毒品防治、反詐騙和婦女人身安全為優先重點
 
   .section-class.scroll-spy-section#section-3 data-spy-index="3"
     span.animation.fade-in 政策
@@ -104,7 +70,7 @@
   .section
     .center-content
       .text-content
-        h3.section-title （一）推動「安心住宅計畫」
+        h3.section-title 推動「安心住宅計畫」
         .figure
             img.image.animation.slide-up src="/images/policies_image/five_plans/fp_1.jpg"
         p.text-center <strong>八年內完成20萬戶只租不賣社會住宅，獎勵居家改造、優化居住空間</strong>
@@ -120,10 +86,10 @@
             p 屬於提供長期使用之資源，加上社會住宅具有租金收入的自償效果。因此，社會住宅興辦資金之安排，應以「長期低利融資為主，編列公務預算為輔」之原則，以各期租金收入償還融資本息為核心，租金收入若有不足時，再搭配公務預算補貼；也因為社會住宅提供政府長期使用，因此由長期各屆執政者分別承擔，方屬公平合理。
 
 
-  .section
+  .section.white-block
     .center-content
       .text-content
-        h3.section-title （二）建立「食品安全計畫」
+        h3.section-title 建立「食品安全計畫」
         .figure
             img.image.animation.slide-up src="/images/policies_image/five_plans/fp_2.jpg"
         p.text-center <strong>政府從農場到餐桌都嚴格把關，建立產銷履歷制度、提昇農業及食品加工技術</strong>
@@ -139,7 +105,7 @@
   .section
     .center-content
       .text-content
-        h3.section-title （三）推動「社區照顧計畫」
+        h3.section-title 推動「社區照顧計畫」
         .figure
             img.image.animation.slide-up src="/images/policies_image/five_plans/fp_3.jpg"
         p.text-center <strong>「托育、長照、就業」三合一照顧政策，並轉型為社會健康照護管理中心</strong>
@@ -154,74 +120,50 @@
             h4.section-sub-title 創造就業機會，帶動地區經濟發展
             p 透過政府對照顧體系的公共投資及社區參與，創造在地的就業機會，包括托育體系的幼教人員、社區保姆、課後照顧等人員，及長期照顧體系的照顧服務員、社會工作、護理、物理治療、職能治療、營養等人員。政府有責任確保照顧體系工作者的職業尊嚴，及勞動與薪資水準。
 
-  .section
+  .section.white-block
     .center-content
       .text-content
-        h3.section-title （四）推動「年金永續計畫」
+        h3.section-title 推動「年金永續計畫」
         .figure
             img.image.animation.slide-up src="/images/policies_image/five_plans/fp_4.jpg"
         p.text-center <strong>召開年金國是會議，讓各行各業都參與討論</strong>
         p.text-center 現在各大退撫基金或保險，都潛藏了鉅額債務，總計約17兆8千億元。<br>如果我們不去積極解決，年金破產危機將難以避免。
-      .text-content
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 年金制度兩個目標
-            ol.list
-              li.animation.fade-in
-                p 給付水準必須讓國民的老年生活不虞匱乏，這是基本生活的需求；
-              li.animation.fade-in
-                p 在收入跟支出之間，必須維持年金體系的永續。
 
+        ul.todo-list.multi-col-content
+          .multi-col-content-inner
+            li.col-2-content
+              h4.section-sub-title 年金制度兩個目標
+              ol.list.animation.fade-in
+                li 給付水準必須讓國民的老年生活不虞匱乏，這是基本生活的需求；
+                li 在收入跟支出之間，必須維持年金體系的永續。
+            li.col-2-content
+              h4.section-sub-title 年金改革基本四原則
+              ul.list.animation.fade-in
+                li 採取漸進式的調整
+                li 簡化目前過於複雜分歧的制度
+                li 適當延後年金請領年齡
+                li 逐步合理化年金的所得替代率。
+            li.col-2-content
+              h4.section-sub-title 改革過程三件注意
+              ul.list.animation.fade-in
+                li 找出團結社會的改革手段，團結社會，而不是造成社會分裂對立。
+                li 克服政治人物的選票私心，還有畏難怕苦的心態。
+                li 改革的對象是「制度」，而不是制度下的任何人，對立的社會無助於改革的成功。
+            li.col-2-content
+              h4.section-sub-title 同意「年金改革大聯盟」四點訴求
+              ul.list.animation.fade-in
+                li「選前不加碼」
+                li「選後不迴避」
+                li「召開協商平台」
+                li「討論公開透明」
+        p.text-center <strong>其實年金改革的方案，社會也有過很多的討論，為什麼難以成功？</strong>
+        p 因為這個事情存在著感情面，是台灣社會長久以來累積出來的東西，沒有誰對誰錯的問題。只是我們在面對下個世代的危機時，要如何處理這樣的問題，這必須是出於大家對社會整體永續的一種堅定的目標和共識，也必須出於我們對下個世代的疼惜，及給他們一個公平的未來。不要急著訂出一個特定方案，然後用政治力量去強推。
 
-      .text-content
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 改革過程三件注意
-            ul.list
-              li.animation.fade-in
-                p 找出團結社會的改革手段，團結社會，而不是造成社會分裂對立。
-              li.animation.fade-in
-                p 克服政治人物的選票私心，還有畏難怕苦的心態。
-              li.animation.fade-in
-                p 改革的對象是「制度」，而不是制度下的任何人，對立的社會無助於改革的成功。
-
-
-      .text-content
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 年金改革基本四原則
-            ul.list
-              li.animation.fade-in
-                p 採取漸進式的調整
-              li.animation.fade-in
-                p 簡化目前過於複雜分歧的制度
-              li.animation.fade-in
-                p 適當延後年金請領年齡
-              li.animation.fade-in
-                p 逐步合理化年金的所得替代率。
-
-      .text-content
-        ul.todo-list
-          li.animation.fade-in
-            h4.section-sub-title 同意「年金改革大聯盟」四點訴求
-            ul.list
-              li.animation.fade-in
-                p 「選前不加碼」
-              li.animation.fade-in
-                p 「選後不迴避」
-              li.animation.fade-in
-                p 「召開協商平台」
-              li.animation.fade-in
-                p 「討論公開透明」
-            ul.faq-list
-              li
-                .question 其實年金改革的方案，社會也有過很多的討論，為什麼難以成功？
-                .answer 因為這個事情存在著感情面，是台灣社會長久以來累積出來的東西，沒有誰對誰錯的問題。只是我們在面對下個世代的危機時，要如何處理這樣的問題，這必須是出於大家對社會整體永續的一種堅定的目標和共識，也必須出於我們對下個世代的疼惜，及給他們一個公平的未來。不要急著訂出一個特定方案，然後用政治力量去強推。
 
   .section
     .center-content
       .text-content
-        h3.section-title （五）推動「治安維護計畫」
+        h3.section-title 推動「治安維護計畫」
         .figure
             img.image.animation.slide-up src="/images/policies_image/five_plans/fp_5.jpg"
         p.text-center <strong>毒品防治、反詐騙和婦女人身安全為優先重點</strong>
@@ -242,7 +184,7 @@
 
   .section
     .center-content
-      h3.section-title 五大計畫，社會安定
+      img.image.animation.fade-in src="/images/policies_image/five_plans/fp.gif"
 
 
   .post
