--- a/sass/page/policies-page/_base.sass
+++ b/sass/page/policies-page/_base.sass
@@ -67,7 +67,7 @@ ul, ol
       left: 0
       right: 0
       bottom: 0
-      +background(linear-gradient(to bottom, rgba(10,10,10,0) 0%, rgba(10,10,10,1) 15%))
+      +background(linear-gradient(to bottom, rgba(10,10,10,0) 0px, rgba(10,10,10,1) 200px))
 
 
 +at-breakpoint($pad)
@@ -88,7 +88,7 @@ ul, ol
       +padding-leader(14)
 
       &:after
-        +background(linear-gradient(to bottom, rgba(10,10,10,0) 0%, rgba(10,10,10,1) 25%))
+        +background(linear-gradient(to bottom, rgba(10,10,10,0) 0px, rgba(10,10,10,1) 500px))
 
 
 +at-breakpoint($desktop)
@@ -109,4 +109,4 @@ ul, ol
       +padding-leader(20)
 
       &:after
-        +background(linear-gradient(to bottom, rgba(10,10,10,0) 0%, rgba(10,10,10,1) 30%))
+        +background(linear-gradient(to bottom, rgba(10,10,10,0) 0px, rgba(10,10,10,1) 550px))
