將五大社會安定計畫的圖片動畫改為fade-in

--- a/policies/five-plans.html.slim
+++ b/policies/five-plans.html.slim
@@ -72,7 +72,7 @@
       .text-content
         h3.section-title 推動「安心住宅計畫」
         .figure
-            img.image.animation.slide-up src="/images/policies_image/five_plans/fp_1.jpg"
+            img.image.animation.fade-in src="/images/policies_image/five_plans/fp_1.jpg"
         p.text-center <strong>八年內完成20萬戶只租不賣社會住宅，獎勵居家改造、優化居住空間</strong>
         ul.todo-list
           li.animation.fade-in
@@ -91,7 +91,7 @@
       .text-content
         h3.section-title 建立「食品安全計畫」
         .figure
-            img.image.animation.slide-up src="/images/policies_image/five_plans/fp_2.jpg"
+            img.image.animation.fade-in src="/images/policies_image/five_plans/fp_2.jpg"
         p.text-center <strong>政府從農場到餐桌都嚴格把關，建立產銷履歷制度、提昇農業及食品加工技術</strong>
         ul.todo-list
           li.animation.fade-in
@@ -107,7 +107,7 @@
       .text-content
         h3.section-title 推動「社區照顧計畫」
         .figure
-            img.image.animation.slide-up src="/images/policies_image/five_plans/fp_3.jpg"
+            img.image.animation.fade-in src="/images/policies_image/five_plans/fp_3.jpg"
         p.text-center <strong>「托育、長照、就業」三合一照顧政策，並轉型為社會健康照護管理中心</strong>
         ul.todo-list
           li.animation.fade-in
@@ -125,7 +125,7 @@
       .text-content
         h3.section-title 推動「年金永續計畫」
         .figure
-            img.image.animation.slide-up src="/images/policies_image/five_plans/fp_4.jpg"
+            img.image.animation.fade-in src="/images/policies_image/five_plans/fp_4.jpg"
         p.text-center <strong>召開年金國是會議，讓各行各業都參與討論</strong>
         p.text-center 現在各大退撫基金或保險，都潛藏了鉅額債務，總計約17兆8千億元。<br>如果我們不去積極解決，年金破產危機將難以避免。
 
@@ -165,7 +165,7 @@
       .text-content
         h3.section-title 推動「治安維護計畫」
         .figure
-            img.image.animation.slide-up src="/images/policies_image/five_plans/fp_5.jpg"
+            img.image.animation.fade-in src="/images/policies_image/five_plans/fp_5.jpg"
         p.text-center <strong>毒品防治、反詐騙和婦女人身安全為優先重點</strong>
         p 治安政策除了要持續掃黑幫、掃黑槍之外，毒品防制、反詐騙、婦女幼兒人身安全將是優先的重點。<br>尤其毒品問題是許多暴力犯罪的根源，監獄裡的受刑人有百分之四十六和毒品藥物有關，是監獄人滿為患的重要原因。所以未來一定要強力掃蕩毒品販運和製造，也要根除校園的毒品問題。<br>無論是反毒、還是反詐騙，我們都要和其他國家，一起來建立跨國的合作機制，密切交換資訊，共同來打擊犯罪。
         h4.section-sub-title 「反毒作戰」五大重點
