五大社會安定計畫換字

--- a/policies/five-plans.html.slim
+++ b/policies/five-plans.html.slim
@@ -26,7 +26,7 @@
       a.post-tag href="http://iing.tw/tags/五大計畫" 五大計畫
 
   .section
-    blockquote: p 執政黨已經執政七年多，在這個政府的治理之下，台灣不但沒有進步，甚至還一直在退步。<br>經濟失去動力、社會也不安定，人民擔心的問題一大堆，食品安全、長期照顧、年金改革、財政紀律，問題一個接一個一直來，但是這個政府都沒有在處理這些問題。
+    blockquote: p 國民黨已經執政七年多，在這個政府的治理之下，台灣不但沒有進步，甚至還一直在退步。<br>經濟失去動力、社會也不安定，人民擔心的問題一大堆，食品安全、長期照顧、年金改革、財政紀律，問題一個接一個一直來，但是這個政府都沒有在處理這些問題。
     .blockquote-name: span 蔡英文
 
   .section-class.scroll-spy-section#section-1 data-spy-index="1"
@@ -36,8 +36,8 @@
     .center-content
       .text-content
         h3.section-title 台灣社會現況與困境
-        p 這幾年的台灣社會，經濟停滯、出口衰退、股票大跌、食安風暴、年金破產，挑戰接二連三的來，政府卻麻木不仁，對當前的憂慮視而不見。全球化的挑戰一波接著一波，政府卻還在為了七十年前的事情爭吵不休。經濟不好，社會也不安定。房價太高，年輕人失去希望；食安風暴，人民不知所措，不知道什麼可以吃，什麼不能吃；
-        p 高齡化的挑戰來襲，對於人民最關心的老幼照顧，政府只忙於做表面工夫，通過的法律只有法條，沒有穩定財源。人民最在意領不到退休金的問題，政府兩手一攤，要下一屆政府自己看著辦。經濟出問題，治安也跟著走下坡，隨機殺人、兒童受虐，這些新聞層出不窮，讓人擔心、也讓人心疼。詐騙集團橫行，連曾經擔任部長的人，都成為詐騙集團的受害者。大家都在問，台灣怎麼了？
+        p 這幾年的台灣社會，經濟停滯、出口衰退、食安風暴、年金財務不佳，挑戰接二連三的來，政府卻麻木不仁，對當前的憂慮視而不見。經濟不好，社會也不安定。房價太高，年輕人失去希望；食安風暴，人民不知所措，不知道什麼可以吃，什麼不能吃；
+        p 高齡化的挑戰來襲，對於人民最關心的老幼照顧，政府只忙於做表面工夫，通過的法律只有法條，欠缺足夠財源。人民最在意領不到退休金的問題，政府兩手一攤，要下一屆政府自己看著辦。經濟出問題，治安也跟著走下坡，隨機殺人、兒童受虐，這些新聞層出不窮，讓人擔心、也讓人心疼。詐騙集團橫行，連曾經擔任部長的人，都成為詐騙集團的受害者。大家都在問，台灣怎麼了？
         p 台灣生病了，我們的社會，需要安定的力量。人民需要解決問題的政府，而不是製造問題的政府。人民需要凝聚共識的政府，而不是撕裂社會的政府。做不好，就換掉。既然不論發生什麼事，對手都說，難道蔡英文不用負責嗎？那麼接下來就讓蔡英文來負責。換我們來做，讓我們來當安定的力量，讓我們來推動穩健的改革，讓我們來負責。
 
   .section-class.scroll-spy-section#section-2 data-spy-index="2"
@@ -61,20 +61,20 @@
         ul.todo-list
           li.animation.fade-in
             h4.section-sub-title 政府興辦為主，引導民間興辦為輔
-            p 興辦社會住宅將作為中央與地方政府住宅計畫最核心的工作項目，強制要求內政部與各地方政府，依據住宅法第5條規定，於「法定住宅政策」與「法定住宅計畫」中，明確提出社會住宅興辦計畫與進度。以中央執政立場而言，應可宣示於執政8年內全國完成規劃與興建20萬戶為目標，待此目標達成時，搭配屆時國內租屋體系發展狀況，評估檢討後續是否繼續興辦。
+            p 興辦社會住宅將作為中央與地方政府住宅計畫最核心的工作項目，要求內政部與各地方政府，依據住宅法第5條規定，於「法定住宅政策」與「法定住宅計畫」中，明確提出社會住宅興辦計畫與進度。以中央執政立場而言，宣示於執政8年內全國完成規劃與興建20萬戶為目標，待此目標達成時，搭配屆時國內租屋體系發展狀況，評估檢討後續是否繼續興辦。
           li.animation.fade-in
             h4.section-sub-title 社會住宅土地來源
             p 基本上應以公有非公用土地無償撥用，或低價承租為原則，否則一旦土地價格納入興辦成本計算，實施者的財務壓力勢必無法承擔。因此，應將社會住宅訂為都市計劃中的公共設施項目，公有土地原則上採無償撥用。
           li.animation.fade-in
             h4.section-sub-title 社會住宅建設經費
-            p 屬於提供長期使用之資源，加上社會住宅具有租金收入的自償效果。因此，社會住宅興辦資金之安排，應以「長期低利融資為主，編列公務預算為輔」之原則，以各期租金收入償還融資本息為核心，租金收入若有不足時，再搭配公務預算補貼；也因為社會住宅提供政府長期使用，因此由長期各屆執政者分別承擔，方屬公平合理。
+            p 屬於提供長期使用之資源，加上社會住宅具有租金收入的自償效果。因此，社會住宅興辦資金之安排，應以「長期低利融資為主，編列公務預算為輔」之原則，以各期租金收入償還融資本息為核心，租金收入若有不足時，再搭配公務預算補貼。
 
 
   .section.white-block
     .center-content
       .text-content
         h3.section-title 建立「食品安全計畫」
-        p.text-center <strong>政府從農場到餐桌都嚴格把關，建立產銷履歷制度、提昇農業及食品加工技術</strong>
+        p.text-center <strong>政府從農場到餐桌都嚴格把關，完善產銷履歷制度、提昇農業及食品加工技術</strong>
         ul.todo-list
           li.animation.fade-in
             h4.section-sub-title 國家認證標章
