體育政策換字

--- a/policies/physical-culture.html.slim
+++ b/policies/physical-culture.html.slim
@@ -76,10 +76,10 @@
         h3.section-title 菁英競技<br><span class="dt-hide">，</span>帶動國家競爭力
         ol.order-list
           li.animation.fade-in
-            h4.section-sub-title 成立行政院體育發展委員會，統籌規劃<br>國家體育發展
+            h4.section-sub-title 成立行政院體育發展策略小組，統籌規劃<br>國家體育發展
             ul.list
               li 2013年政府組織改造時，行政院體育委員會是唯一被降編的機關，和教育部體育司合併為體育署；雖然有助於資源整合，卻無法顧及全面體育政策發展。
-              li 未來將在行政院成立任務編組的「體育發展委員會」，以推動「運動全民化、運動產業化、運動國際化」為首要任務，並由政務委員以上的層級擔任召集人，協調各部會體育相關政策，統籌規劃國家體育發展，再由體育署與相關單位執行。
+              li 未來將在行政院成立任務編組的「體育發展策略小組」，以推動「運動全民化、運動產業化、運動國際化」為首要任務，並由政務委員以上的層級擔任召集人，協調各部會體育相關政策，統籌規劃國家體育發展，再由體育署與相關單位執行。
               li 體育可以提升體力、國力、國際競爭力，並帶動產業、經濟成長，我們要把體育當成國家重要戰略來思考。
           li.animation.fade-in
             h4.section-sub-title 積極媒合企業投資體育，大幅提升民間投入<br>體育經費
@@ -87,11 +87,6 @@
               li 目前我國體育年度總預算約80億元，僅占中央政府總預算0.4%，但在政府有限的財源下，為了能有效推動體育運動發展，除了檢討公務預算及資源配置、善用運動發展基金外，更須與民間合作，促進企業投資並贊助體育運動事業。
               li 雖然運動產業發展條例有鼓勵企業投資，但成效有待提升。未來政府要積極媒合企業贊助與體育界需求，設計誘因，鼓勵企業冠名，有效促進企業投資或贊助體育活動、團體、選手、設備等。
               li 運動彩券發行盈餘撥入的運動發展基金，也要有效運用。未來運動發展基金的財務運用要公開透明，而且要符合國家整體體育運動發展。
-          li.animation.fade-in
-            h4.section-sub-title 制定體育團體法，健全體育團體組織功能與環境
-            ul.list
-              li 目前我國體育團體都是由人民團體法來管理，造成人才留不住、社會資源投入意願低、缺乏市場競爭能力。
-              li 日本的單項協會多數屬財團發人組織。為了加強我國體育團體、各單項運動協會之組織功能，協助各類競技活動朝向國際化、專業化發展，並與國際接軌，我們要推動體育團體法之制定，並檢討修正體育團體相關制度，輔導體育團體朝向企業化經營，增加社會資源投入意願，健全體育團體環境與機制。
           li.animation.fade-in
             h4.section-sub-title 建構完善「選訓賽輔獎」制度，菁英培訓從根紮起
             ul.list
