五大社會換字

--- a/policies/five-plans.html.slim
+++ b/policies/five-plans.html.slim
@@ -67,7 +67,7 @@
             p 基本上應以公有非公用土地無償撥用，或低價承租為原則，否則一旦土地價格納入興辦成本計算，實施者的財務壓力勢必無法承擔。因此，應將社會住宅訂為都市計劃中的公共設施項目，公有土地原則上採無償撥用。
           li.animation.fade-in
             h4.section-sub-title 社會住宅建設經費
-            p 屬於提供長期使用之資源，加上社會住宅具有租金收入的自償效果。因此，社會住宅興辦資金之安排，應以「長期低利融資為主，編列公務預算為輔」之原則，以各期租金收入償還融資本息為核心，租金收入若有不足時，再搭配公務預算補貼。
+            p 屬於提供長期使用之資源，加上社會住宅具有租金收入的自償效果。因此，社會住宅興辦資金之安排，應以「長期低利融資為主，編列公務預算為輔」之原則，以各期租金收入償還融資本息為核心。租金收入若有不足時，再搭配公務預算補貼。
 
 
   .section.white-block
